Mon Dec  7 16:10:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* service.make: Applied patch supplied by <doko@cs.tu-berlin.de> to
	find make_services if it hasn't been installed.

Mon Dec  7  6:45:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* openapp.in: Removed dependency on xargs - don't see how it could
	have caused the recent problems reported of openapp silently failing
	but it's a possibility.

Wed Nov 25 16:25:09 1998  Adam Fedor  <fedor@doc.com>

	* configure.in (ac_cv_library_combo): Take old value if not set.

Mon Nov 23 14:00:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	GNUmakefile.in: mod for services
	services.make: new build target for services bundle.
	application.make: Improved generation of Info-gnustep.plist
	bundle.make: Improved generation of Info-gnustep.plist

1998-11-19 14:20  Lyndon Tremblay  <tremblay2@home.com>

	* GNUmakefile.in: Added model (un)installation (SavePanel.gmodel), 
	                  model files install in GNUSTEP_ROOT/Library/Model/
	* SavePanel.gmodel: More GUI elements, nearing completion

Wed Nov 18 17:20:02 1998  Adam Fedor  <fedor@hyper.doc.com>

	* brain.make (SYSTEM_LIBS): Remove dps libs from xraw compilation.

Mon Nov 16 15:09:47 1998  Adam Fedor  <fedor@ultra.doc.com>

	* application.make: Change RESOURCE_FILES="none" to ""
	* bunlder.make: Likewise.
	* target.make: Second try on NetBSD.

Thu Nov 12 1998  Felipe A. Rodriguez  <far@ix.netcom.com>

	* test-application.make add support for building individual subprojects
      using the typical command line of "make mySubproject". 
	* application.make revert resource copying to original 0.5.0 in order to
      fix resource copy bug in xraw/Workspace example.

Wed Nov 11 23:30:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>

	* configure.in: Added checks for thread library on linux
	* configure: generated from configure.in
	* config.make.in: Set thread library value