@@ -38,6 +38,8 @@ fi`)
 #--------------------------------------------------------------------
 AC_CANONICAL_SYSTEM
 
+AC_SUBST(program_suffix)
+
 #--------------------------------------------------------------------
 # Find the binary and compile tools
 #--------------------------------------------------------------------
