@@ -1,3 +1,12 @@
+Mon Dec  7 09:58:01 1998  Adam Fedor  <fedor@ultra.doc.com>
+
+	* target.make: Add FreeBSD target for shared libs.
+	* config.make.in (EXEEXT): Set from program_suffix.
+	* openapp.in (EXEEXT): Likewise.
+ 	* debugapp.in (EXEEXT): Likewise.
+
+	* aggregate.make (internal-all): Break if subproject make fails.
+
 Mon Dec  7 16:10:00 1998  Richard Frith-Macdonald <richard@brainstrom.co.uk>
 
 	* service.make: Applied patch supplied by <doko@cs.tu-berlin.de> to
